[package]
name = "rock_em"
version = "0.1.0"
authors = ["hoang.phanhuy <hoang.phanhuy@vietis.com.vn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket-multipart-form-data = "0.9.6"
byte-unit = "4.0.9"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_sqlite_pool"]

[global.databases]
sqlite_logs = "database.sqlite"
